--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "heroku-postbuild": "webpack -p --config ./webpack.config.js"
   },
   "dependencies": {
+    "babel-polyfill": "^6.16.0",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "dotenv": "^2.0.0",
-    "es6-promise": "^4.0.5",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "google-map-react": "^0.22.0",
     "history": "^4.4.1",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.16.4",
@@ -36,7 +37,6 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-saga": "^0.13.0",
-    "redux-thunk": "^2.1.0",
     "reselect": "^2.5.4",
     "serve-favicon": "^2.3.2"
   },
