--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
-    "google-map-react": "^0.22.0",
     "history": "^4.4.1",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.16.4",
@@ -38,7 +37,8 @@
     "redux": "^3.6.0",
     "redux-saga": "^0.13.0",
     "reselect": "^2.5.4",
-    "serve-favicon": "^2.3.2"
+    "serve-favicon": "^2.3.2",
+    "yelp": "^1.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
