--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "material-ui": "^0.16.4",
     "mongoose": "^4.7.0",
     "passport": "^0.3.2",
+    "passport-github2": "^0.1.10",
     "passport-local": "^1.0.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
