fix heroku postbuild

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prod": "webpack --progress -p",
     "watch": "webpack -w",
     "start": "node ./server/server.js",
-    "heroku-postbuild": "webpack -p --config ./webpack.config.js"
+    "heroku-postbuild": "./node_modules/.bin/webpack -p --config ./webpack.config.js"
   },
   "dependencies": {
     "babel-polyfill": "^6.16.0",
